[package]
name = "iouring_bench"
version = "0.1.0"
edition = "2024"

[dependencies]
io-uring = "0.7.10"
libc = "0.2.175"
log = "0.4"
env_logger = "0.11"
httparse = "1.10.1"
glommio = "0.9.0"
futures-lite = "2.6.1"
bytes = "1.10.1"
tokio = { version = "1.47.1", features = ["full"] }
clap = { version = "4.5.48", features = ["derive"] }
histogram = "0.11.3"
thiserror = "2.0.17"
anyhow = "1.0.100"
clap-duration = "0.1.11"
duration-human = "0.1.10"

[profile.release]
opt-level = 3
debug = true          # keep symbols
lto = "thin"          # optional
codegen-units = 1     # optional, steadier profiles
